@@ -1,10 +1,8 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.24 2005-06-28 20:58:32 achu Exp $
+## $Id: Makefile.am,v 1.25 2005-06-28 22:14:12 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
-
-DYNAMIC_MODULES_MANPAGES = cerebro_module_devel.3
 
 man1_MANS  = cerebro.1
 
@@ -13,6 +11,8 @@ man3_MANS  = libcerebro.3 \
 	     cerebro_handle_create.3 \
 	     cerebro_handle_destroy.3 \
 	     cerebro_errnum.3 \
+	     cerebro_metriclist_errnum.3 \
+	     cerebro_metriclist_iterator_errnum.3 \
 	     cerebro_nodelist_errnum.3 \
 	     cerebro_nodelist_iterator_errnum.3 \
 	     cerebro_strerror.3 \
@@ -24,7 +24,16 @@ man3_MANS  = libcerebro.3 \
 	     cerebro_set_timeout_len.3 \
 	     cerebro_get_flags.3 \
 	     cerebro_set_flags.3 \
+	     cerebro_get_metric_names.3 \
 	     cerebro_get_metric_data.3 \
+	     cerebro_metriclist_length.3 \
+	     cerebro_metriclist_destroy.3 \
+	     cerebro_metriclist_iterator_create.3 \
+	     cerebro_metriclist_iterator_next.3 \
+	     cerebro_metriclist_iterator_reset.3 \
+	     cerebro_metriclist_iterator_at_end.3 \
+	     cerebro_metriclist_iterator_metric_name.3 \
+	     cerebro_metriclist_iterator_destroy.3 \
 	     cerebro_nodelist_metric_name.3 \
 	     cerebro_nodelist_length.3 \
 	     cerebro_nodelist_destroy.3 \
@@ -36,7 +45,7 @@ man3_MANS  = libcerebro.3 \
 	     cerebro_nodelist_iterator_metric_value.3 \
 	     cerebro_nodelist_iterator_destroy.3 \
 	     cerebro_module.3 \
-	     $(DYNAMIC_MODULES_MANPAGES)
+	     cerebro_module_devel.3
 
 man5_MANS  = cerebro.conf.5
  
@@ -48,6 +57,8 @@ EXTRA_DIST = cerebro.1 \
 	     cerebro_handle_create.3 \
 	     cerebro_handle_destroy.3 \
 	     cerebro_errnum.3 \
+	     cerebro_metriclist_errnum.3 \
+	     cerebro_metriclist_iterator_errnum.3 \
 	     cerebro_nodelist_errnum.3 \
 	     cerebro_nodelist_iterator_errnum.3 \
 	     cerebro_strerror.3 \
@@ -59,7 +70,16 @@ EXTRA_DIST = cerebro.1 \
 	     cerebro_set_timeout_len.3 \
 	     cerebro_get_flags.3 \
 	     cerebro_set_flags.3 \
+	     cerebro_get_metric_names.3 \
 	     cerebro_get_metric_data.3 \
+	     cerebro_metriclist_length.3 \
+	     cerebro_metriclist_destroy.3 \
+	     cerebro_metriclist_iterator_create.3 \
+	     cerebro_metriclist_iterator_next.3 \
+	     cerebro_metriclist_iterator_reset.3 \
+	     cerebro_metriclist_iterator_at_end.3 \
+	     cerebro_metriclist_iterator_metric_name.3 \
+	     cerebro_metriclist_iterator_destroy.3 \
 	     cerebro_nodelist_metric_name.3 \
 	     cerebro_nodelist_length.3 \
 	     cerebro_nodelist_destroy.3 \
@@ -71,6 +91,6 @@ EXTRA_DIST = cerebro.1 \
 	     cerebro_nodelist_iterator_metric_value.3 \
 	     cerebro_nodelist_iterator_destroy.3 \
 	     cerebro_module.3 \
-	     $(DYNAMIC_MODULES_MANPAGES) \
+	     cerebro_module_devel.3 \
 	     cerebro.conf.5 \
 	     cerebrod.8
