@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: libcerebro.3,v 1.14 2005-06-28 20:58:32 achu Exp $
+\."$Id: libcerebro.3,v 1.15 2005-06-28 22:14:12 achu Exp $
 \."#############################################################################
 .TH LIBCEREBRO 3 "August 2003" "LLNL" "LIBCEREBRO"
 .SH "NAME"
@@ -13,6 +13,10 @@ or down
 .BI "int cerebro_handle_destroy(cerebro_t handle);"
 .sp
 .BI "int cerebro_errnum(cerebro_t handle);"
+.sp
+.BI "int cerebro_metriclist_errnum(cerebro_metriclist_t metriclist);"
+.sp
+.BI "int cerebro_metriclist_iterator_errnum(cerebro_metriclist_iterator_t metriclistItr);"
 .sp
 .BI "int cerebro_nodelist_errnum(cerebro_nodelist_t nodelist);"
 .sp
@@ -36,7 +40,25 @@ or down
 .sp
 .BI "int cerebro_set_flags(cerebro_t handle, unsigned int flags);"
 .sp
+.BI "cerebro_metriclist_t cerebro_get_metric_names(cerebro_t handle);"
+.sp
 .BI "cerebro_nodelist_t cerebro_get_metric_data(cerebro_t handle, const char *metric_name);"
+.sp
+.BI "int cerebro_metriclist_length(cerebro_metriclist_t metriclist);"
+.sp
+.BI "int cerebro_metriclist_destroy(cerebro_metriclist_t metriclist);"
+.sp
+.BI "cerebro_metriclist_iterator_t cerebro_metriclist_iterator_create(cerebro_metriclist_t metriclist);"
+.sp
+.BI "int cerebro_metriclist_iterator_metric_name(cerebro_metriclist_iterator_t metriclistItr, char **metric_name);"
+.sp
+.BI "int cerebro_metriclist_iterator_next(cerebro_metriclist_iterator_t metriclistItr);"
+.sp
+.BI "int cerebro_metriclist_iterator_reset(cerebro_metriclist_iterator_t metriclistItr);"
+.sp
+.BI "int cerebro_metriclist_iterator_at_end(cerebro_metriclist_iterator_t metriclistItr);"
+.sp
+.BI "int cerebro_metriclist_iterator_destroy(cerebro_metriclist_iterator_t metriclistItr);"
 .sp
 .BI "char *cerebro_nodelist_metric_name(cerebro_nodelist_t nodelist);
 .sp
@@ -78,12 +100,20 @@ manpage for information on cerebro modules.
 /usr/include/cerebro.h
 .SH "SEE ALSO"
 cerebro_handle_create(3), cerebro_handle_destroy(3),
-cerebro_errnum(3), cerebro_nodelist_errnum(3),
+cerebro_errnum(3), cerebro_metriclist_errnum(3),
+cerebro_metriclist_iterator_errnum(3), cerebro_nodelist_errnum(3),
 cerebro_nodelist_iterator_errnum(3), cerebro_strerror(3),
 cerebro_get_hostname(3), cerebro_set_hostname(3), cerebro_get_port(3),
 cerebro_set_port(3), cerebro_get_timeout_len(3),
 cerebro_set_timeout_len(3), cerebro_get_flags(3),
-cerebro_set_flags(3), cerebro_get_metric_data(3),
+cerebro_set_flags(3), cerebro_get_metric_names(3),
+cerebro_get_metric_data(3), cerebro_metriclist_length(3),
+cerebro_metriclist_destroy(3), cerebro_metriclist_iterator_create(3),
+cerebro_metriclist_iterator_metric_name(3),
+cerebro_metriclist_iterator_next(3),
+cerebro_metriclist_iterator_reset(3),
+cerebro_metriclist_iterator_at_end(3),
+cerebro_metriclist_iterator_destroy(3),
 cerebro_nodelist_metric_name(3), cerebro_nodelist_length(3),
 cerebro_nodelist_destroy(3), cerebro_nodelist_iterator_create(3),
 cerebro_nodelist_iterator_nodename(3),
@@ -91,5 +121,4 @@ cerebro_nodelist_iterator_metric_value(3),
 cerebro_nodelist_iterator_next(3), cerebro_nodelist_iterator_reset(3),
 cerebro_nodelist_iterator_at_end(3),
 cerebro_nodelist_iterator_destroy(3), cerebro_module(3),
-cerebro_module_devel(3),
-cerebro.conf(5)
+cerebro_module_devel(3), cerebro.conf(5)
