@@ -1,6 +1,8 @@
 2005-06-28  Albert Chu  <chu11@llnl.gov>
 
 	* Continued bug fixes and code cleanup.
+
+	* Updated manpages.
 	
 2005-06-27  Albert Chu  <chu11@llnl.gov>
 
